McIdasPreferenceManager.java: * don't be alarmed! most of this stuff is just (slightly) cleaning up the code to prep for improving panel creation times and the new server manager.
* replaced occurrences of "new Boolean(...)" with "Boolean.valueOf(...)"

McVGuiUtils.java:
* changed makeComboBox to accommodate "Collection" or array.

* altered setListData and getEditableBox from GuiUtils; probably a WIP?

* javadocs (for the additions) soon!

[0]