@@ -53,9 +53,11 @@ import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.TimeZone;
 import java.util.Vector;
+import java.util.concurrent.ConcurrentHashMap;
 
 import javax.swing.BorderFactory;
 import javax.swing.DefaultListCellRenderer;
@@ -72,6 +74,7 @@ import javax.swing.JRadioButton;
 import javax.swing.JScrollPane;
 import javax.swing.JTextField;
 import javax.swing.ListSelectionModel;
+import javax.swing.SwingUtilities;
 import javax.swing.border.BevelBorder;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
@@ -182,127 +185,115 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
     // TODO(jon): this should be really temporary
     private static final String PREF_GLOBE_BGCOLOR = "View.GlobeBackgroundColor";
 
-	/** test value for formatting */
-	private static double latlonValue = -104.56284;
+    private static final String LEGEND_TEMPLATE_DATA = "%datasourcename% - %displayname%";
+    private static final String DISPLAY_LIST_TEMPLATE_DATA = "%datasourcename% - %displayname% " + UtcDate.MACRO_TIMESTAMP;
 
-	/** Decimal format */
-	private static DecimalFormat latlonFormat = new DecimalFormat();
+    private static final String TEMPLATE_NO_DATA = "%displayname%";
 
-	/** Provide some default values for the lat-lon preference drop down. */
-	private static List<String> defaultLatLonFormats = new ArrayList<String>();
-	static {
-		defaultLatLonFormats.add("##0");
-		defaultLatLonFormats.add("##0.0");
-		defaultLatLonFormats.add("##0.0#");
-		defaultLatLonFormats.add("##0.0##");
-		defaultLatLonFormats.add("0.0");
-		defaultLatLonFormats.add("0.00");
-		defaultLatLonFormats.add("0.000");
-	}
+    /** test value for formatting */
+    private static double latlonValue = -104.56284;
 
-	/** 
-	 * Replacing the "incoming" IDV preference tab names with whatever's in
-	 * this map.
-	 */
-	private static Hashtable<String, String> replaceMap = 
-		new Hashtable<String, String>();
+    /** Decimal format */
+    private static DecimalFormat latlonFormat = new DecimalFormat();
 
-	static {
-		replaceMap.put("Toolbar", Constants.PREF_LIST_TOOLBAR);
-		replaceMap.put("View", Constants.PREF_LIST_VIEW);
-	}
+    /** Provide some default values for the lat-lon preference drop down. */
+    private static final Set<String> defaultLatLonFormats = CollectionHelpers.set("##0","##0.0","##0.0#","##0.0##","0.0","0.00","0.000");
 
-	/** Path to the McV choosers.xml */
-	private static final String MCV_CHOOSERS = 
-		"/edu/wisc/ssec/mcidasv/resources/choosers.xml";
+    private static final Set<String> probeFormatsList = CollectionHelpers.set(DisplayControl.DEFAULT_PROBEFORMAT, "%rawvalue% [%rawunit%]", "%value%", "%rawvalue%", "%value% <i>%unit%</i>");
 
-	/** 
-	 * Maps the {@literal "name"} of a panel to the actual thing holding the 
-	 * PreferenceManager. 
-	 */
-	private Hashtable<String, Container> prefMap = 
-		new Hashtable<String, Container>();
+    /** 
+     * Replacing the "incoming" IDV preference tab names with whatever's in
+     * this map.
+     */
+    private static final Map<String, String> replaceMap = 
+        CollectionHelpers.zipMap(
+            CollectionHelpers.arr("Toolbar", "View"), 
+            CollectionHelpers.arr(Constants.PREF_LIST_TOOLBAR, Constants.PREF_LIST_VIEW));
 
-	/** Maps the name of a panel to an icon. */
-	private Hashtable<String, URL> iconMap = new Hashtable<String, URL>();
+    /** Path to the McV choosers.xml */
+    private static final String MCV_CHOOSERS = "/edu/wisc/ssec/mcidasv/resources/choosers.xml";
 
-	/** 
-	 * A table of the different preference managers that'll wind up in the
-	 * list.
-	 */
-	private Hashtable<String, PreferenceManager> managerMap = new Hashtable<String, PreferenceManager>();
+    /** 
+     * Maps the {@literal "name"} of a panel to the actual thing holding the 
+     * PreferenceManager. 
+     */
+    private final Map<String, Container> prefMap = CollectionHelpers.concurrentMap();
 
-	/**
-	 * Each PreferenceManager has associated data contained in this table.
-	 * TODO: bug Unidata about getting IdvPreferenceManager's dataList protected
-	 */
-	private Hashtable<String, Object> dataMap = new Hashtable<String, Object>();
+    /** Maps the name of a panel to an icon. */
+    private final Map<String, ImageIcon> iconCache = CollectionHelpers.concurrentMap();
 
-	private Set<String> labelSet = new LinkedHashSet<String>();
+    /** 
+     * A table of the different preference managers that'll wind up in the
+     * list.
+     */
+    private final Map<String, PreferenceManager> managerMap = CollectionHelpers.concurrentMap();
 
-	/** 
-	 * The list that'll contain all the names of the different 
-	 * PreferenceManagers 
-	 */
-	private JList labelList;
+    /**
+     * Each PreferenceManager has associated data contained in this table.
+     * TODO: bug Unidata about getting IdvPreferenceManager's dataList protected
+     */
+    private final Map<String, Object> dataMap = CollectionHelpers.concurrentMap();
 
-	/** The "M" in the MVC for JLists. Contains all the list data. */
-	private DefaultListModel listModel;
+    private final Set<String> labelSet = new LinkedHashSet<String>();
 
-	/** Handle scrolling like a pro. */
-	private JScrollPane listScrollPane;
+    /** 
+     * The list that'll contain all the names of the different 
+     * PreferenceManagers 
+     */
+    private JList labelList;
 
-	/** Holds the main preference pane */
-	private JPanel mainPane;
+    /** The "M" in the MVC for JLists. Contains all the list data. */
+    private DefaultListModel listModel;
 
-	/** Holds the buttons at the bottom */
-	private JPanel buttonPane;
+    /** Handle scrolling like a pro. */
+    private JScrollPane listScrollPane;
 
-	/** Date formats */
-	private String[] dateFormats = {
-		DEFAULT_DATE_FORMAT, "MM/dd/yy HH:mm z", "dd.MM.yy HH:mm z",
-		"yyyy-MM-dd", "EEE, MMM dd yyyy HH:mm z", "HH:mm:ss", "HH:mm",
-		"yyyy-MM-dd'T'HH:mm:ss'Z'", "yyyy-MM-dd'T'HH:mm:ssZ"
-	};
+    /** Holds the main preference pane */
+    private JPanel mainPane;
 
-	/** Is this a Unix-style platform? */
-	private boolean isUnixLike = false;
+    /** Holds the buttons at the bottom */
+    private JPanel buttonPane;
 
-	/** Is this a Windows platform? */
-	private boolean isWindows = false;
+    /** Date formats */
+    private final Set<String> dateFormats = CollectionHelpers.set(
+        DEFAULT_DATE_FORMAT, "MM/dd/yy HH:mm z", "dd.MM.yy HH:mm z", 
+        "yyyy-MM-dd", "EEE, MMM dd yyyy HH:mm z", "HH:mm:ss", "HH:mm", 
+        "yyyy-MM-dd'T'HH:mm:ss'Z'", "yyyy-MM-dd'T'HH:mm:ssZ");
 
-	/** The toolbar editor */
-	private McvToolbarEditor toolbarEditor;
+    /** Is this a Unix-style platform? */
+    private boolean isUnixLike = false;
 
-	/** */
-	private String userDirectory;
+    /** Is this a Windows platform? */
+    private boolean isWindows = false;
 
-	/** */
-	private String userPrefs;
+    /** The toolbar editor */
+    private McvToolbarEditor toolbarEditor;
 
-	/** */
-	private String defaultPrefs;
+    /** */
+    private String userDirectory;
 
-	private ServerPreferenceManager serverManager;
-	
-	private static final String LEGEND_TEMPLATE_DATA = "%datasourcename% - %displayname%";
-	private static final String DISPLAY_LIST_TEMPLATE_DATA = "%datasourcename% - %displayname% " + UtcDate.MACRO_TIMESTAMP;
+    /** */
+    private String userPrefs;
 
-	private static final String TEMPLATE_NO_DATA = "%displayname%";
+    /** */
+    private String defaultPrefs;
 
-	/**
-	 * Prep as much as possible for displaying the preference window: load up
-	 * icons and create some of the window features.
-	 * 
-	 * @param idv Reference to the supreme IDV object.
-	 */
+    private ServerPreferenceManager serverManager;
+
+    /**
+     * Prep as much as possible for displaying the preference window: load up
+     * icons and create some of the window features.
+     * 
+     * @param idv Reference to the supreme IDV object.
+     */
     public McIdasPreferenceManager(IntegratedDataViewer idv) {
         super(idv);
         init();
 
-        for (int i = 0; i < PREF_PANELS.length; i++)
-            iconMap.put(PREF_PANELS[i][0], 
-                getClass().getResource(PREF_PANELS[i][1]));
+        for (int i = 0; i < PREF_PANELS.length; i++) {
+            URL url = getClass().getResource(PREF_PANELS[i][1]);
+            iconCache.put(PREF_PANELS[i][0], new ImageIcon(url));
+        }
 
         setEmptyPref("idv.displaylist.template.data", DISPLAY_LIST_TEMPLATE_DATA);
         setEmptyPref("idv.displaylist.template.nodata", TEMPLATE_NO_DATA);
@@ -335,9 +326,9 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
     }
 
     public void replaceServerPrefPanel(final JPanel panel) {
-    	String name = "SERVER MANAGER";
-    	mainPane.add(name, panel);
-		((CardLayout)mainPane.getLayout()).show(mainPane, name);
+        String name = "SERVER MANAGER";
+        mainPane.add(name, panel);
+        ((CardLayout)mainPane.getLayout()).show(mainPane, name);
     }
 
     /**
@@ -353,7 +344,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
     @Override public void add(String tabLabel, String description, 
         PreferenceManager listener, Container panel, Object data) {
 
-    	// if there is an alternate name for tabLabel, find and use it.
+        // if there is an alternate name for tabLabel, find and use it.
         if (replaceMap.containsKey(tabLabel) == true)
             tabLabel = replaceMap.get(tabLabel);
 
@@ -383,7 +374,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         if (labelSet.add(tabLabel)) {
             JLabel label = new JLabel();
             label.setText(tabLabel);
-            label.setIcon(new ImageIcon(iconMap.get(tabLabel)));
+            label.setIcon(iconCache.get(tabLabel));
             listModel.addElement(label);
 
             labelList.setSelectedIndex(selected);
@@ -391,7 +382,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
             if (selectedPanel.equals(tabLabel))
                 ((CardLayout)mainPane.getLayout()).show(mainPane, tabLabel);
         }
-        
+
         mainPane.repaint();
     }
 
@@ -420,8 +411,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
     // new font size didn't change after starting the prefs panel. 
     private void fixDisplayListFont() {
         IdvObjectStore s = getStore();
-        Font f = 
-            s.get(ViewManager.PREF_DISPLAYLISTFONT, FontSelector.DEFAULT_FONT);
+        Font f = s.get(ViewManager.PREF_DISPLAYLISTFONT, FontSelector.DEFAULT_FONT);
         if (f.getSize() == 0) {
             f = f.deriveFont(8f);
             s.put(ViewManager.PREF_DISPLAYLISTFONT, f);
@@ -489,16 +479,16 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         return prefMap.get(key);
     }
 
-    private Container getSelectedPanel(String name) {
-    	if (name.equals(Constants.PREF_LIST_NAV_CONTROLS)) {
-    	    return makeEventPanel();
-    	}
-    	else if (prefMap.contains(name))
-    		return prefMap.get(name);
-    	else
-    		return null;
+    private Container getSelectedPanel(final String name) {
+        if (name.equals(Constants.PREF_LIST_NAV_CONTROLS)) {
+            return makeEventPanel();
+        }
+        else if (prefMap.containsKey(name))
+            return prefMap.get(name);
+        else
+            return null;
     }
-    
+
     /**
      * Returns the container the corresponds to the currently selected label in
      * the JList. Also stores the selected panel so that the next time a user
@@ -574,21 +564,21 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         org.jdesktop.layout.GroupLayout layout = new org.jdesktop.layout.GroupLayout(contents);
         contents.setLayout(layout);
         layout.setHorizontalGroup(
-        		layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-        		.add(layout.createSequentialGroup()
-        				.add(listScrollPane, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE)
-        				.addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-        				.add(mainPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-        				.add(buttonPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+                .add(layout.createSequentialGroup()
+                        .add(listScrollPane, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE)
+                        .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
+                        .add(mainPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                        .add(buttonPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
         );
         layout.setVerticalGroup(
-        		layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-        		.add(layout.createSequentialGroup()
-        				.add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.TRAILING)
-        						.add(org.jdesktop.layout.GroupLayout.LEADING, mainPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-        						.add(org.jdesktop.layout.GroupLayout.LEADING, listScrollPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-        						.addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-        						.add(buttonPane, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE))
+                layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+                .add(layout.createSequentialGroup()
+                        .add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.TRAILING)
+                                .add(org.jdesktop.layout.GroupLayout.LEADING, mainPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                                .add(org.jdesktop.layout.GroupLayout.LEADING, listScrollPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                                .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
+                                .add(buttonPane, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE))
         );
     }
 
@@ -713,8 +703,13 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
             final JCheckBox cb = new JCheckBox(name, store.get(id, value));
             cb.addPropertyChangeListener(new PropertyChangeListener() {
                 public void propertyChange(final PropertyChangeEvent e) {
-                    boolean selected = store.get(id, value);
-                    cb.setSelected(selected);
+                    SwingUtilities.invokeLater(new Runnable() {
+                        public void run() {
+                            boolean internalSel = store.get(id, value);
+
+                            cb.setSelected(store.get(id, value));
+                        }
+                    });
                 }
             });
             if (objects[i].length > 3)
@@ -732,7 +727,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         // Build the threads panel
         Vector threadRenderList = new Vector();
         for(int i=1;i<=Runtime.getRuntime().availableProcessors();i++) {
-        	threadRenderList.add(new Integer(i));
+            threadRenderList.add(new Integer(i));
         }
         Integer threadRenderMax = new Integer(getIdv().getMaxRenderThreadCount());
         final JComboBox threadRenderComboBox = McVGuiUtils.makeComboBox(threadRenderList, threadRenderMax);        
@@ -740,35 +735,35 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
 
         Vector threadReadList = new Vector();
         for(int i=1;i<=12;i++) {
-        	threadReadList.add(new Integer(i));
+            threadReadList.add(new Integer(i));
         }
         Integer threadReadMax = new Integer(getIdv().getMaxDataThreadCount());
         final JComboBox threadReadComboBox = McVGuiUtils.makeComboBox(threadReadList, threadReadMax);        
         widgets.put(PREF_THREADS_DATA, threadReadComboBox);
-        
-    	JPanel threadsPanel = McVGuiUtils.topBottom(
-    	        McVGuiUtils.makeLabeledComponent("Rendering:", threadRenderComboBox),
-    	        McVGuiUtils.makeLabeledComponent("Reading:", threadReadComboBox),
-    	        Prefer.NEITHER);
-		threadsPanel.setBorder(BorderFactory.createTitledBorder("Java Threads"));
-        
+
+        JPanel threadsPanel = McVGuiUtils.topBottom(
+            McVGuiUtils.makeLabeledComponent("Rendering:", threadRenderComboBox),
+            McVGuiUtils.makeLabeledComponent("Reading:", threadReadComboBox),
+            Prefer.NEITHER);
+        threadsPanel.setBorder(BorderFactory.createTitledBorder("Java Threads"));
+
         // Build the startup options panel
         StartupManager.INSTANCE.getPlatform().setUserDirectory(
-        		getIdv().getObjectStore().getUserDirectory().toString());
+                getIdv().getObjectStore().getUserDirectory().toString());
         StartupManager.INSTANCE.getPlatform().setAvailableMemory(
-        		getIdv().getStateManager().getProperty(Constants.PROP_SYSMEM, "0"));
+                getIdv().getStateManager().getProperty(Constants.PROP_SYSMEM, "0"));
         JPanel smPanel = StartupManager.INSTANCE.getAdvancedPanel(true);
         List<JPanel> stuff = Collections.singletonList(smPanel);
-        
+
         PreferenceManager advancedManager = new PreferenceManager() {
             public void applyPreference(XmlObjectStore theStore, Object data) {
                 IdvPreferenceManager.applyWidgets((Hashtable)data, theStore);
                 StartupManager.INSTANCE.handleApply();
             }
         };
-        
+
         JPanel outerPanel = new JPanel();
-        
+
         // Outer panel layout
         org.jdesktop.layout.GroupLayout layout = new org.jdesktop.layout.GroupLayout(outerPanel);
         outerPanel.setLayout(layout);
@@ -866,13 +861,13 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         JScrollPane cbScroller = new JScrollPane(cbPanel);
         cbScroller.getVerticalScrollBar().setUnitIncrement(10);
         cbScroller.setPreferredSize(new Dimension(300, 300));
-        
+
         JComponent exportComp =
             GuiUtils.right(GuiUtils.makeButton("Export to Plugin", this,
                 "exportControlsToPlugin"));
-        
+
         JComponent cbComp = GuiUtils.centerBottom(cbScroller, exportComp);
-        
+
         JPanel bottomPanel =
             GuiUtils.leftCenter(
                 GuiUtils.inset(
@@ -884,63 +879,51 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         JPanel controlsPanel =
             GuiUtils.inset(GuiUtils.topCenter(GuiUtils.hbox(useAllBtn,
                 useTheseBtn), bottomPanel), 6);
-        
+
         GuiUtils.enableTree(cbPanel, !useAllBtn.isSelected());
         useAllBtn.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent ae) {
                 GuiUtils.enableTree(cbPanel, !useAllBtn.isSelected());
-                
                 allOn.setEnabled(!useAllBtn.isSelected());
-                
                 allOff.setEnabled(!useAllBtn.isSelected());
             }
         });
-        
+
         useTheseBtn.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent ae) {
                 GuiUtils.enableTree(cbPanel, !useAllBtn.isSelected());
-                
                 allOn.setEnabled(!useAllBtn.isSelected());
-                
                 allOff.setEnabled(!useAllBtn.isSelected());
             }
         });
 
         GuiUtils.enableTree(cbPanel, !useAllBtn.isSelected());
-        
+
         allOn.setEnabled(!useAllBtn.isSelected());
-        
+
         allOff.setEnabled(!useAllBtn.isSelected());
 
         PreferenceManager controlsManager = new PreferenceManager() {
-            public void applyPreference(XmlObjectStore theStore,
-                                        Object data) {
+            public void applyPreference(XmlObjectStore theStore, Object data) {
                 controlDescriptorsToShow = new Hashtable();
-                
+
                 Hashtable<JCheckBox, ControlDescriptor> table = (Hashtable)data;
-                
+
                 List<ControlDescriptor> controlDescriptors = getIdv().getAllControlDescriptors();
-                
-                for (Enumeration keys =
-                        table.keys(); keys.hasMoreElements(); ) {
-                    JCheckBox         cbx = (JCheckBox) keys.nextElement();
-                    
-                    ControlDescriptor cd  =
-                        (ControlDescriptor) table.get(cbx);
-                    
-                    controlDescriptorsToShow.put(cd.getControlId(),
-                            new Boolean(cbx.isSelected()));
+
+                for (Enumeration keys = table.keys(); keys.hasMoreElements(); ) {
+                    JCheckBox cbx = (JCheckBox) keys.nextElement();
+                    ControlDescriptor cd = (ControlDescriptor)table.get(cbx);
+                    controlDescriptorsToShow.put(cd.getControlId(), Boolean.valueOf(cbx.isSelected()));
                 }
-                
+
                 showAllControls = useAllBtn.isSelected();
-                
+
                 theStore.put(PROP_CONTROLDESCRIPTORS, controlDescriptorsToShow);
-                
-                theStore.put(PROP_CONTROLDESCRIPTORS_ALL,
-                             new Boolean(showAllControls));
+                theStore.put(PROP_CONTROLDESCRIPTORS_ALL,Boolean.valueOf(showAllControls));
             }
         };
-        
+
         this.add(Constants.PREF_LIST_AVAILABLE_DISPLAYS,
                  "What displays should be available in the user interface?",
                  controlsManager, controlsPanel, cbxToCdMap);
@@ -952,14 +935,14 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         MapViewManager mappy = new MapViewManager(getIdv());
 
         Object[][] legendObjects = {
-            { "Show Side Legend", MapViewManager.PREF_SHOWSIDELEGEND, new Boolean(mappy.getShowSideLegend()) },
-            { "Show Bottom Legend", MapViewManager.PREF_SHOWBOTTOMLEGEND, new Boolean(mappy.getShowBottomLegend()) }
+            { "Show Side Legend", MapViewManager.PREF_SHOWSIDELEGEND, Boolean.valueOf(mappy.getShowSideLegend()) },
+            { "Show Bottom Legend", MapViewManager.PREF_SHOWBOTTOMLEGEND, Boolean.valueOf(mappy.getShowBottomLegend()) }
         };
         JPanel legendPanel = makePrefPanel(legendObjects, widgets, getStore());
         legendPanel.setBorder(BorderFactory.createTitledBorder("Legends"));
 
         Object[][] navigationObjects = {
-            { "Show Earth Navigation Panel", MapViewManager.PREF_SHOWEARTHNAVPANEL, new Boolean(mappy.getShowEarthNavPanel()) },
+            { "Show Earth Navigation Panel", MapViewManager.PREF_SHOWEARTHNAVPANEL, Boolean.valueOf(mappy.getShowEarthNavPanel()) },
             { "Show Viewpoint Toolbar", MapViewManager.PREF_SHOWTOOLBAR + "perspective" },
             { "Show Zoom/Pan Toolbar", MapViewManager.PREF_SHOWTOOLBAR + "zoompan" },
             { "Show Undo/Redo Toolbar", MapViewManager.PREF_SHOWTOOLBAR + "undoredo" }
@@ -968,16 +951,15 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         navigationPanel.setBorder(BorderFactory.createTitledBorder("Navigation Toolbars"));
 
         Object[][] panelObjects = {
-//            { "Show Globe Background", MapViewManager.PREF_SHOWGLOBEBACKGROUND, new Boolean(mappy.getGlobeBackgroundShow()) },
-            { "Show Globe Background", "View.ShowGlobeBackground", new Boolean(mappy.getGlobeBackgroundShow()) },
-            { "Show Wireframe Box", MapViewManager.PREF_WIREFRAME, new Boolean(mappy.getWireframe()) },
-            { "Show Cursor Readout", MapViewManager.PREF_SHOWCURSOR, new Boolean(mappy.getShowCursor()) },
-            { "Clip View At Box", MapViewManager.PREF_3DCLIP, new Boolean(mappy.getClipping()) },
-            { "Show Layer List in Panel", MapViewManager.PREF_SHOWDISPLAYLIST, new Boolean(mappy.getShowDisplayList()) },
-            { "Show Times In Panel", MapViewManager.PREF_ANIREADOUT, new Boolean(mappy.getAniReadout()) },
-            { "Show Map Display Scales", MapViewManager.PREF_SHOWSCALES, new Boolean(mappy.getLabelsVisible()) },
-            { "Show Transect Display Scales", MapViewManager.PREF_SHOWTRANSECTSCALES, new Boolean(mappy.getTransectLabelsVisible()) },
-            { "Show \"Please Wait\" Message", MapViewManager.PREF_WAITMSG, new Boolean(mappy.getWaitMessageVisible()) },
+            { "Show Globe Background", MapViewManager.PREF_SHOWGLOBEBACKGROUND, Boolean.valueOf(mappy.getGlobeBackgroundShow()) },
+            { "Show Wireframe Box", MapViewManager.PREF_WIREFRAME, Boolean.valueOf(mappy.getWireframe()) },
+            { "Show Cursor Readout", MapViewManager.PREF_SHOWCURSOR, Boolean.valueOf(mappy.getShowCursor()) },
+            { "Clip View At Box", MapViewManager.PREF_3DCLIP, Boolean.valueOf(mappy.getClipping()) },
+            { "Show Layer List in Panel", MapViewManager.PREF_SHOWDISPLAYLIST, Boolean.valueOf(mappy.getShowDisplayList()) },
+            { "Show Times In Panel", MapViewManager.PREF_ANIREADOUT, Boolean.valueOf(mappy.getAniReadout()) },
+            { "Show Map Display Scales", MapViewManager.PREF_SHOWSCALES, Boolean.valueOf(mappy.getLabelsVisible()) },
+            { "Show Transect Display Scales", MapViewManager.PREF_SHOWTRANSECTSCALES, Boolean.valueOf(mappy.getTransectLabelsVisible()) },
+            { "Show \"Please Wait\" Message", MapViewManager.PREF_WAITMSG, Boolean.valueOf(mappy.getWaitMessageVisible()) },
             { "Reset Projection With New Data", MapViewManager.PREF_PROJ_USEFROMDATA }
         };
         JPanel panelPanel = makePrefPanel(panelObjects, widgets, getStore());
@@ -1349,128 +1331,127 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
                 getStore().put(PREF_OPEN_MERGE, shouldMerge);
             }
             getStore().put(PREF_OPEN_ASK, !askCbx.isSelected());
-            
         }
         return new boolean[] { true, shouldRemove, shouldMerge };
     }
-        
+
     /**
      * Creates and adds the formats and data preference panel.
      */
     protected void addFormatDataPreferences() {
         Hashtable<String, Component> widgets = new Hashtable<String, Component>();
-        
+
         JPanel formatPanel = new JPanel();
         formatPanel.setBorder(BorderFactory.createTitledBorder("Formats"));
-        
+
         // Date stuff
         JLabel dateLabel = McVGuiUtils.makeLabelRight("Date Format:", Width.ONEHALF);
-        
+
         String dateFormat = getStore().get(PREF_DATE_FORMAT, DEFAULT_DATE_FORMAT);
-        List dateFormatsList = Misc.toList(dateFormats);
-        if ( !dateFormatsList.contains(dateFormat)) {
-        	dateFormatsList.add(dateFormat);
+
+        if (!dateFormats.contains(dateFormat)) {
+            dateFormats.add(dateFormat);
         }
-        final JComboBox dateComboBox = McVGuiUtils.makeComboBox(dateFormatsList, dateFormat, Width.DOUBLE);
+
+        final JComboBox dateComboBox = McVGuiUtils.makeComboBox(dateFormats, dateFormat, Width.DOUBLE);
         widgets.put(PREF_DATE_FORMAT, dateComboBox);
-        
+
         JComponent dateHelpButton = getIdv().makeHelpButton("idv.tools.preferences.dateformat");
-        
+
         JLabel dateExLabel = new JLabel("");
-        
+
         // Time stuff
         JLabel timeLabel = McVGuiUtils.makeLabelRight("Time Zone:", Width.ONEHALF);
-        
+
         String timeString = getStore().get(PREF_TIMEZONE, DEFAULT_TIMEZONE);
-        String[] zonestrings = TimeZone.getAvailableIDs();
-        Arrays.sort(zonestrings);
-        List zones = Misc.toList(zonestrings);
-        final JComboBox timeComboBox = McVGuiUtils.makeComboBox(zones, timeString, Width.DOUBLE);
+        String[] zoneStrings = TimeZone.getAvailableIDs();
+        Arrays.sort(zoneStrings);
+
+        final JComboBox timeComboBox = McVGuiUtils.makeComboBox(zoneStrings, timeString, Width.DOUBLE);
         widgets.put(PREF_TIMEZONE, timeComboBox);
-        
+
         JComponent timeHelpButton = getIdv().makeHelpButton("idv.tools.preferences.dateformat");
-        
+
         JLabel timeExLabel = new JLabel("");
-        
+
         try {
-        	dateExLabel.setText("ex:  " + new DateTime().toString());
+            dateExLabel.setText("ex:  " + new DateTime().toString());
         } catch (Exception ve) {
-        	dateExLabel.setText("Can't format date: " + ve);
+            dateExLabel.setText("Can't format date: " + ve);
         }
-        
+
         ObjectListener timeLabelListener = new ObjectListener(dateExLabel) {
-        	public void actionPerformed(ActionEvent ae) {
-        		JLabel label  = (JLabel) theObject;
-        		String format = dateComboBox.getSelectedItem().toString();
-        		String zone   = timeComboBox.getSelectedItem().toString();
-        		try {
-        			TimeZone tz = TimeZone.getTimeZone(zone);
-        			// hack to make it the DateTime default
-        			if (format.equals(DEFAULT_DATE_FORMAT)) {
-        				if (zone.equals(DEFAULT_TIMEZONE)) {
-        					format = DateTime.DEFAULT_TIME_FORMAT + "'Z'";
-        				}
-        			}
-        			label.setText("ex:  " + new DateTime().formattedString(format, tz));
-        		} catch (Exception ve) {
-        			label.setText("Invalid format or time zone");
-        			LogUtil.userMessage("Invalid format or time zone");
-        		}
-        	}
+            public void actionPerformed(ActionEvent ae) {
+                JLabel label  = (JLabel) theObject;
+                String format = dateComboBox.getSelectedItem().toString();
+                String zone = timeComboBox.getSelectedItem().toString();
+                try {
+                    TimeZone tz = TimeZone.getTimeZone(zone);
+                    // hack to make it the DateTime default
+                    if (format.equals(DEFAULT_DATE_FORMAT)) {
+                        if (zone.equals(DEFAULT_TIMEZONE)) {
+                            format = DateTime.DEFAULT_TIME_FORMAT + "'Z'";
+                        }
+                    }
+                    label.setText("ex:  " + new DateTime().formattedString(format, tz));
+                } catch (Exception ve) {
+                    label.setText("Invalid format or time zone");
+                    LogUtil.userMessage("Invalid format or time zone");
+                }
+            }
         };
         dateComboBox.addActionListener(timeLabelListener);
         timeComboBox.addActionListener(timeLabelListener);
-        
+
         // Lat/Lon stuff
         JLabel latlonLabel = McVGuiUtils.makeLabelRight("Lat/Lon Format:", Width.ONEHALF);
-        
+
         String latlonFormatString = getStore().get(PREF_LATLON_FORMAT, "##0.0");
         JComboBox latlonComboBox = McVGuiUtils.makeComboBox(defaultLatLonFormats, latlonFormatString, Width.DOUBLE);
         widgets.put(PREF_LATLON_FORMAT, latlonComboBox);
 
-                
         JComponent latlonHelpButton = getIdv().makeHelpButton("idv.tools.preferences.latlonformat");
-        
+
         JLabel latlonExLabel = new JLabel("");
-        
+
         try {
-        	latlonFormat.applyPattern(latlonFormatString);
-        	latlonExLabel.setText("ex: " + latlonFormat.format(latlonValue));
+            latlonFormat.applyPattern(latlonFormatString);
+            latlonExLabel.setText("ex: " + latlonFormat.format(latlonValue));
         } catch (IllegalArgumentException iae) {
-        	latlonExLabel.setText("Bad format: " + latlonFormatString);
+            latlonExLabel.setText("Bad format: " + latlonFormatString);
         }
         latlonComboBox.addActionListener(new ObjectListener(latlonExLabel) {
-        	public void actionPerformed(ActionEvent ae) {
-        		JLabel    label   = (JLabel) theObject;
-        		JComboBox box     = (JComboBox) ae.getSource();
-        		String    pattern = box.getSelectedItem().toString();
-        		try {
-        			latlonFormat.applyPattern(pattern);
-        			label.setText("ex: " + latlonFormat.format(latlonValue));
-        		} catch (IllegalArgumentException iae) {
-        			label.setText("bad pattern: " + pattern);
-        			LogUtil.userMessage("Bad format:" + pattern);
-        		}
-        	}
+            public void actionPerformed(final ActionEvent ae) {
+                JLabel label = (JLabel)theObject;
+                JComboBox box = (JComboBox)ae.getSource();
+                String pattern = box.getSelectedItem().toString();
+                try {
+                    latlonFormat.applyPattern(pattern);
+                    label.setText("ex: " + latlonFormat.format(latlonValue));
+                } catch (IllegalArgumentException iae) {
+                    label.setText("bad pattern: " + pattern);
+                    LogUtil.userMessage("Bad format:" + pattern);
+                }
+            }
         });
-        
+
         // Probe stuff
         JLabel probeLabel = McVGuiUtils.makeLabelRight("Probe Format:", Width.ONEHALF);
 
         String probeFormat = getStore().get(DisplayControl.PREF_PROBEFORMAT, DisplayControl.DEFAULT_PROBEFORMAT);
-        List probeFormatsList = Misc.newList(DisplayControl.DEFAULT_PROBEFORMAT,
-        		"%rawvalue% [%rawunit%]", "%value%", "%rawvalue%", "%value% <i>%unit%</i>");
+//        List probeFormatsList = Misc.newList(DisplayControl.DEFAULT_PROBEFORMAT,
+//              "%rawvalue% [%rawunit%]", "%value%", "%rawvalue%", "%value% <i>%unit%</i>");
         JComboBox probeComboBox = McVGuiUtils.makeComboBox(probeFormatsList, probeFormat, Width.DOUBLE);
         widgets.put(DisplayControl.PREF_PROBEFORMAT, probeComboBox);
-        
+
         JComponent probeHelpButton = getIdv().makeHelpButton("idv.tools.preferences.probeformat");
-        
+
         // Distance stuff
         JLabel distanceLabel = McVGuiUtils.makeLabelRight("Distance Unit:", Width.ONEHALF);
 
         Unit distanceUnit = null;
         try {
-        	distanceUnit = ucar.visad.Util.parseUnit(getStore().get(PREF_DISTANCEUNIT, "km"));
+            distanceUnit = ucar.visad.Util.parseUnit(getStore().get(PREF_DISTANCEUNIT, "km"));
         } catch (Exception exc) {}
         JComboBox distanceComboBox = getIdv().getDisplayConventions().makeUnitBox(distanceUnit, null);
         McVGuiUtils.setComponentWidth(distanceComboBox, Width.DOUBLE);
@@ -1480,7 +1461,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         org.jdesktop.layout.GroupLayout formatLayout = new org.jdesktop.layout.GroupLayout(formatPanel);
         formatPanel.setLayout(formatLayout);
         formatLayout.setHorizontalGroup(
-        		formatLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+            formatLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
             .add(formatLayout.createSequentialGroup()
                 .addContainerGap()
                 .add(formatLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
@@ -1517,7 +1498,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
                 .addContainerGap(org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         );
         formatLayout.setVerticalGroup(
-        		formatLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+            formatLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
             .add(formatLayout.createSequentialGroup()
                 .add(formatLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
                     .add(dateComboBox)
@@ -1545,19 +1526,21 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
                     .add(distanceLabel))
                 .addContainerGap(org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         );
-        
+
         JPanel dataPanel = new JPanel();
         dataPanel.setBorder(BorderFactory.createTitledBorder("Data"));
-        
+
         // Sampling stuff
         JLabel sampleLabel = McVGuiUtils.makeLabelRight("Sampling Mode:", Width.ONEHALF);
-        
+
         String sampleValue = getStore().get(PREF_SAMPLINGMODE, DisplayControlImpl.WEIGHTED_AVERAGE);
         JRadioButton sampleWA = new JRadioButton(DisplayControlImpl.WEIGHTED_AVERAGE,
-        		sampleValue.equals(DisplayControlImpl.WEIGHTED_AVERAGE));
+            sampleValue.equals(DisplayControlImpl.WEIGHTED_AVERAGE));
+
         sampleWA.setToolTipText("Use a weighted average sampling");
         JRadioButton sampleNN = new JRadioButton(DisplayControlImpl.NEAREST_NEIGHBOR,
-        		sampleValue.equals(DisplayControlImpl.NEAREST_NEIGHBOR));
+            sampleValue.equals(DisplayControlImpl.NEAREST_NEIGHBOR));
+
         sampleNN.setToolTipText("Use a nearest neighbor sampling");
         GuiUtils.buttonGroup(sampleWA, sampleNN);
         widgets.put("WEIGHTED_AVERAGE", sampleWA);
@@ -1565,13 +1548,11 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
 
         // Pressure stuff
         JLabel verticalLabel = McVGuiUtils.makeLabelRight("Pressure to Height:", Width.ONEHALF);
-        
+
         String verticalValue = getStore().get(PREF_VERTICALCS, DataUtil.STD_ATMOSPHERE);
-        JRadioButton verticalSA = new JRadioButton("Standard Atmosphere",
-        		verticalValue.equals(DataUtil.STD_ATMOSPHERE));
+        JRadioButton verticalSA = new JRadioButton("Standard Atmosphere", verticalValue.equals(DataUtil.STD_ATMOSPHERE));
         verticalSA.setToolTipText("Use a standard atmosphere height approximation");
-        JRadioButton verticalV5D = new JRadioButton("Vis5D",
-        		verticalValue.equals(DataUtil.VIS5D_VERTICALCS));
+        JRadioButton verticalV5D = new JRadioButton("Vis5D", verticalValue.equals(DataUtil.VIS5D_VERTICALCS));
         verticalV5D.setToolTipText("Use the Vis5D vertical transformation");
         GuiUtils.buttonGroup(verticalSA, verticalV5D);
         widgets.put(DataUtil.STD_ATMOSPHERE, verticalSA);
@@ -1582,23 +1563,23 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
 
         JCheckBox cacheCheckBox = new JCheckBox("Cache Data in Memory", getStore().get(PREF_DOCACHE, true));
         widgets.put(PREF_DOCACHE, cacheCheckBox);
-        
+
         JLabel cacheEmptyLabel = McVGuiUtils.makeLabelRight("", Width.ONEHALF);
-        
+
         JTextField cacheTextField = McVGuiUtils.makeTextField(Misc.format(getStore().get(PREF_CACHESIZE, 20.0)));
         JComponent cacheTextFieldComponent = GuiUtils.hbox(new JLabel("Disk Cache Size: "), cacheTextField, new JLabel(" megabytes"));
         widgets.put(PREF_CACHESIZE, cacheTextField);
 
         // Image stuff
         JLabel imageLabel = McVGuiUtils.makeLabelRight("Max Image Size:", Width.ONEHALF);
-        
+
         JTextField imageField = McVGuiUtils.makeTextField(Misc.format(getStore().get(PREF_MAXIMAGESIZE, -1)));
         JComponent imageFieldComponent = GuiUtils.hbox(imageField, new JLabel(" pixels (-1 = no limit)"));
         widgets.put(PREF_MAXIMAGESIZE, imageField);
 
         // Grid stuff
         JLabel gridLabel = McVGuiUtils.makeLabelRight("Grid Threshold:", Width.ONEHALF);
-        
+
         JTextField gridField = McVGuiUtils.makeTextField(Misc.format(getStore().get(PREF_FIELD_CACHETHRESHOLD, 1000000)));
         JComponent gridFieldComponent = GuiUtils.hbox(gridField, new JLabel(" bytes (Cache grids larger than this to disk)"));
         widgets.put(PREF_FIELD_CACHETHRESHOLD, gridField);
@@ -1607,7 +1588,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
         org.jdesktop.layout.GroupLayout dataLayout = new org.jdesktop.layout.GroupLayout(dataPanel);
         dataPanel.setLayout(dataLayout);
         dataLayout.setHorizontalGroup(
-        		dataLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+            dataLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
             .add(dataLayout.createSequentialGroup()
                 .addContainerGap()
                 .add(dataLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
@@ -1642,7 +1623,7 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
                 .addContainerGap(org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         );
         dataLayout.setVerticalGroup(
-        		dataLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+            dataLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
             .add(dataLayout.createSequentialGroup()
                 .add(dataLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
                     .add(sampleLabel)
@@ -1671,9 +1652,9 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
                     .add(gridFieldComponent))
                 .addContainerGap(org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         ); 
-        
+
         JPanel outerPanel = new JPanel();
-        
+
         // Outer panel layout
         org.jdesktop.layout.GroupLayout layout = new org.jdesktop.layout.GroupLayout(outerPanel);
         outerPanel.setLayout(layout);
@@ -1818,33 +1799,29 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
                 GuiUtils.enableTree(allOff, !useAllBtn.isSelected());
             }
         });
-        
-        
 
         PreferenceManager choosersManager = new PreferenceManager() {
-            public void applyPreference(XmlObjectStore theStore,
-                                        Object data) {
+            public void applyPreference(XmlObjectStore theStore, Object data) {
 
-                Hashtable<String, Boolean> newToShow = 
-                    new Hashtable<String, Boolean>();
+                Hashtable<String, Boolean> newToShow = new Hashtable<String, Boolean>();
 
                 Hashtable table = (Hashtable)data;
                 for (Enumeration keys = table.keys(); keys.hasMoreElements(); ) {
-                    String    chooserId = (String) keys.nextElement();
+                    String chooserId = (String) keys.nextElement();
                     JCheckBox chooserCB = (JCheckBox) table.get(chooserId);
-                    newToShow.put(chooserId, new Boolean(chooserCB.isSelected()));
+                    newToShow.put(chooserId, Boolean.valueOf(chooserCB.isSelected()));
                 }
-                
+
                 choosersToShow = newToShow;
-                theStore.put(PROP_CHOOSERS_ALL, new Boolean(useAllBtn.isSelected()));
+                theStore.put(PROP_CHOOSERS_ALL, Boolean.valueOf(useAllBtn.isSelected()));
                 theStore.put(PROP_CHOOSERS, choosersToShow);
             }
         };
         this.add(Constants.PREF_LIST_DATA_CHOOSERS,
                  "What data sources should be shown in the user interface?",
                  choosersManager, choosersPanel, choosersData);
-    }    
-    
+    }
+
     /**
      * <p>Return a list that contains a bunch of arrays of two strings.</p>
      * 
@@ -1854,132 +1831,127 @@ public class McIdasPreferenceManager extends IdvPreferenceManager implements Lis
      * 
      * @return A list of chooser ids and names.
      */
-    private final List<String[]> getChooserData() {    	
-    	List<String[]> choosers = new ArrayList<String[]>();
-    	String tempString;
-    	
-    	try {
-    		// get the root element so we can iterate through
-    		final String xml = 
-    			IOUtil.readContents(MCV_CHOOSERS, McIdasPreferenceManager.class);
+    private final List<String[]> getChooserData() {
+        List<String[]> choosers = new ArrayList<String[]>();
+        String tempString;
+        
+        try {
+            // get the root element so we can iterate through
+            final String xml = 
+                IOUtil.readContents(MCV_CHOOSERS, McIdasPreferenceManager.class);
 
-    		final Element root = XmlUtil.getRoot(xml);
-    		if (root == null)
-    			return null;
-    		
-    		// grab all the children, which should be panels.
-    		final NodeList nodeList = XmlUtil.getElements(root);
-    		for (int i = 0; i < nodeList.getLength(); i++) {
-    			
-    			final Element item = (Element)nodeList.item(i);
-    			    			
-    			if (item.getTagName().equals(XmlUi.TAG_PANEL) || item.getTagName().equals("chooser")) {
+            final Element root = XmlUtil.getRoot(xml);
+            if (root == null)
+                return null;
+            
+            // grab all the children, which should be panels.
+            final NodeList nodeList = XmlUtil.getElements(root);
+            for (int i = 0; i < nodeList.getLength(); i++) {
+                
+                final Element item = (Element)nodeList.item(i);
+                                
+                if (item.getTagName().equals(XmlUi.TAG_PANEL) || item.getTagName().equals("chooser")) {
 
-    				// form the name of the chooser.
-    				final String title = 
-    					XmlUtil.getAttribute(item, XmlUi.ATTR_TITLE, "");
-    				
-    				final String cat = 
-    					XmlUtil.getAttribute(item, XmlUi.ATTR_CATEGORY, "");
+                    // form the name of the chooser.
+                    final String title = 
+                        XmlUtil.getAttribute(item, XmlUi.ATTR_TITLE, "");
+                    
+                    final String cat = 
+                        XmlUtil.getAttribute(item, XmlUi.ATTR_CATEGORY, "");
 
-    				if (cat.equals(""))
-    					tempString = title;
-    				else
-    					tempString = cat + ">" + title;
-    				
-    				final NodeList children = XmlUtil.getElements(item);
-    				
-    				if (item.getTagName().equals("chooser")) {
-    					final String id = 
-    						XmlUtil.getAttribute(item, XmlUi.ATTR_ID, "");
-    					String[] tmp = {id, tempString};
-    					choosers.add(tmp);
-    				}
-    				else {
-    					for (int j = 0; j < children.getLength(); j++) {
-    						final Element child = (Element)children.item(j);
+                    if (cat.equals(""))
+                        tempString = title;
+                    else
+                        tempString = cat + ">" + title;
+                    
+                    final NodeList children = XmlUtil.getElements(item);
+                    
+                    if (item.getTagName().equals("chooser")) {
+                        final String id = 
+                            XmlUtil.getAttribute(item, XmlUi.ATTR_ID, "");
+                        String[] tmp = {id, tempString};
+                        choosers.add(tmp);
+                    }
+                    else {
+                        for (int j = 0; j < children.getLength(); j++) {
+                            final Element child = (Element)children.item(j);
 
-    						// form the id of the chooser and add it to the list.
-    						if (child.getTagName().equals("chooser")) {
-    							final String id = 
-    								XmlUtil.getAttribute(child, XmlUi.ATTR_ID, "");
-    							String[] tmp = {id, tempString};
-    							choosers.add(tmp);
-    						}
-    					}
-    				}
-    			}
-    		}
-    		
-    	} catch (Exception e) {
-    		e.printStackTrace();
-    	}
-    	
-    	return choosers;
+                            // form the id of the chooser and add it to the list.
+                            if (child.getTagName().equals("chooser")) {
+                                final String id = 
+                                    XmlUtil.getAttribute(child, XmlUi.ATTR_ID, "");
+                                String[] tmp = {id, tempString};
+                                choosers.add(tmp);
+                            }
+                        }
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return choosers;
     }
-    
+
     /**
      * Parse the full chooser name for a category
      * @param chooserName
      * @return
      */
     private String getChooserCategory(String chooserName) {
-    	String chooserCategory = "Other";
-    	int indexSep = chooserName.indexOf(">");
-    	if (indexSep >= 0) {
-    		chooserCategory = chooserName.substring(0, indexSep);
-    	}
-    	return chooserCategory;
+        String chooserCategory = "Other";
+        int indexSep = chooserName.indexOf(">");
+        if (indexSep >= 0) {
+            chooserCategory = chooserName.substring(0, indexSep);
+        }
+        return chooserCategory;
     }
-    
+
     /**
      * Parse the full chooser name for a short name
      * @param chooserName
      * @return
      */
     private String getChooserShortName(String chooserName) {
-    	String chooserShortName = chooserName;
-    	int indexSep = chooserName.indexOf(">");
-    	if (indexSep >= 0 && chooserName.length() > indexSep + 1) {
-    		chooserShortName = chooserName.substring(indexSep + 1, chooserName.length());
-    	}
-    	return chooserShortName;
+        String chooserShortName = chooserName;
+        int indexSep = chooserName.indexOf(">");
+        if (indexSep >= 0 && chooserName.length() > indexSep + 1) {
+            chooserShortName = chooserName.substring(indexSep + 1, chooserName.length());
+        }
+        return chooserShortName;
     }
-    
-	public class IconCellRenderer extends DefaultListCellRenderer {
-		
-		/**
-		 * Extends the default list cell renderer to use icons in addition to
-		 * the typical text.
-		 */
-		public Component getListCellRendererComponent(JList list, Object value, 
-				int index, boolean isSelected, boolean cellHasFocus) {
-			
-			super.getListCellRendererComponent(list, value, index, isSelected, 
-					cellHasFocus);
-			
-			if (value instanceof JLabel) {
-				setText(((JLabel)value).getText());
-				setIcon(((JLabel)value).getIcon());
-			}
 
-			return this;
-		}
+    public class IconCellRenderer extends DefaultListCellRenderer {
 
-		/** 
-		 * I wear some pretty fancy pants, so you'd better believe that I'm
-		 * going to enable fancy-pants text antialiasing.
-		 * 
-		 * @param g The graphics object that we'll use as a base.
-		 */
-		protected void paintComponent(Graphics g) {
-			Graphics2D g2d = (Graphics2D)g;
-			
-			g2d.setRenderingHints(getRenderingHints());
-			
-			super.paintComponent(g2d);
-		}
-	}
-    
+        /**
+         * Extends the default list cell renderer to use icons in addition to
+         * the typical text.
+         */
+        public Component getListCellRendererComponent(JList list, Object value, 
+                int index, boolean isSelected, boolean cellHasFocus) {
+
+            super.getListCellRendererComponent(list, value, index, isSelected, 
+                    cellHasFocus);
+
+            if (value instanceof JLabel) {
+                setText(((JLabel)value).getText());
+                setIcon(((JLabel)value).getIcon());
+            }
+
+            return this;
+        }
+
+        /** 
+         * I wear some pretty fancy pants, so you'd better believe that I'm
+         * going to enable fancy-pants text antialiasing.
+         * 
+         * @param g The graphics object that we'll use as a base.
+         */
+        protected void paintComponent(Graphics g) {
+            Graphics2D g2d = (Graphics2D)g;
+            g2d.setRenderingHints(getRenderingHints());
+            super.paintComponent(g2d);
+        }
+    }
 }
 
